feat: feito quadrado e movimentaçao joystic

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -41,6 +41,7 @@
         "ssd1306.h": "c",
         "stdio.h": "c",
         "i2c.h": "c",
-        "clocks.h": "c"
+        "clocks.h": "c",
+        "string.h": "c"
     }
 }
